--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,17 @@
     height: 50px;
     margin: auto;
 }*/
+/*body{*/
+/*}*/
+/*.bg{*/
+    /*background-image: url(../img/bg.png);*/
+    /*position: relative;*/
+    /*width: 100%;*/
+    /*height: 100vh;*/
+    /*background-size: cover;*/
+/*}*/
 
-.black_bg{
+/*.black_bg{
     background: #141414;
     width:100%;
     padding: 20px;
@@ -34,16 +43,17 @@
     padding: 20px;
     height: 500px;
 
-}
+}*/
 nav{
     margin: 0;
     position: fixed;
     width: 100%;
     z-index: 999;
+    background: rgba(236,236,236,0.1);
 }
 nav ul{
-    background: aqua;
     margin:0;
+    height: 60px;
     text-align: center;
 }
 nav ul li{
@@ -70,4 +80,26 @@ nav a{
     text-decoration: none;
     font-family: fontin;
     font-weight: bold;
+}
+
+
+
+
+canvas {
+    display: block;
+    vertical-align: bottom;
+}
+
+/* ---- particles.js container ---- */
+
+#particles-js{
+    width: 100%;
+    height: 100vh;
+    /*background-color: #b61924;*/
+    background-image: url(../img/bg.png);
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+}
+
 }
