--- a/css/style.css
+++ b/css/style.css
@@ -19,15 +19,7 @@
     height: 50px;
     margin: auto;
 }*/
-/*body{*/
-/*}*/
-/*.bg{*/
-    /*background-image: url(../img/bg.png);*/
-    /*position: relative;*/
-    /*width: 100%;*/
-    /*height: 100vh;*/
-    /*background-size: cover;*/
-/*}*/
+
 
 /*.black_bg{
     background: #141414;
@@ -44,6 +36,30 @@
     height: 500px;
 
 }*/
+
+/* =============================================================================
+   HTML5 CSS Reset Minified - Eric Meyer
+   ========================================================================== */
+
+
+
+/* =============================================================================
+   My CSS
+   ========================================================================== */
+
+/* ---- base ---- */
+
+html,body{
+    width:100%;
+    height:100%;
+    background: #fff;
+}
+
+html{
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+
 nav{
     margin: 0;
     position: fixed;
@@ -95,7 +111,6 @@ canvas {
 #particles-js{
     width: 100%;
     height: 100vh;
-    /*background-color: #b61924;*/
     background-image: url(../img/bg.png);
     background-size: cover;
     background-position: 50% 50%;
