--- a/css/style.css
+++ b/css/style.css
@@ -21,31 +21,20 @@
 }*/
 
 
-/*.black_bg{
-    background: #141414;
-    width:100%;
+.black_bg{
     padding: 20px;
-    height: 500px;
+    border-width: 5px;
+    border-style: solid;
 
 }
 .white_bg{
 
-    background: #EE6C4D;
-    width:100%;
+    color: grey;
     padding: 20px;
-    height: 500px;
+    border-width: 5px;
+    border-style: solid;
 
-}*/
-
-/* =============================================================================
-   HTML5 CSS Reset Minified - Eric Meyer
-   ========================================================================== */
-
-
-
-/* =============================================================================
-   My CSS
-   ========================================================================== */
+}
 
 /* ---- base ---- */
 
@@ -53,13 +42,13 @@ html,body{
     width:100%;
     height:100%;
     background: #fff;
+
+
 }
 
-html{
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
 
-
+/*===========Nav Bar===========*/
+/*
 nav{
     margin: 0;
     position: fixed;
@@ -69,13 +58,17 @@ nav{
 }
 nav ul{
     margin:0;
-    height: 60px;
+    height: 40px;
     text-align: center;
+    overflow: hidden;
+
 }
 nav ul li{
     display: inline-block;
     list-style-type: none;
     padding: 15px;
+*/
+
 }
 nav ul li:hover{
     background: blue;
@@ -96,18 +89,21 @@ nav a{
     text-decoration: none;
     font-family: fontin;
     font-weight: bold;
+    color: blue;
 }
 
 
+#home{
+    background-image: url(../img/bg.png);
+    width: 100%;
+    height: 100vh;
 
-
-canvas {
+}
+/* ---- particles.js container ---- */
+/*canvas {
     display: block;
     vertical-align: bottom;
 }
-
-/* ---- particles.js container ---- */
-
 #particles-js{
     width: 100%;
     height: 100vh;
@@ -115,6 +111,42 @@ canvas {
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
+}*/
+
+
+
+/*===========Section===========*/
+
+.section{
+    font-size: 25pxpx;
+    padding: 50px;
+    overflow: hidden;
+    width: 90%;
+    margin: auto;
 }
+#me_img{
+    margin: auto !important;
+}
+#me_img img{
+    max-width: 200px;
+    height: auto;
+    z-index: 1000;
+    margin: auto !important;
+
+}
+#me_txt{
+
+    display:inline-block;
+    text-align: left;
+
+}
+.heading{
+    font-size: 40px;
+    color: #a2a8a6;
+    text-align: center;
+}
+
+.container{
+    text-align: center !important;
 
 }
