--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ nav{
     padding: 10px 6px 10px 6px;
 }
 .nav-item{
-padding: 5px;
+    padding: 5px;
 }
 .nav-link{
     font-size: 21px;
@@ -81,8 +81,8 @@ padding: 5px;
 
 }#home_2{
     background-image: url(../img/tech.png);
-    width: 100%;
-    height: 20vh;
+    height: 10vh;
+    margin: 50px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -111,7 +111,8 @@ padding: 5px;
     font-size: 25px;
     padding: 50px;
     overflow: hidden;
-    margin: auto;
+    margin: 50px;
+    box-shadow: 10px 10px 50px grey;
 }
 #me_img{
     margin: auto !important;
@@ -139,4 +140,5 @@ padding: 5px;
     text-align: center !important;
 
 }
+
 
