--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,19 @@
     margin: auto;
 }*/
 
+#1, #2, #3, #4{
+}
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size:50px;
+}
+
 
 .black_bg{
     padding: 20px;
@@ -71,7 +84,7 @@ nav{
 
 
 #home{
-    background-image: url(../img/bg.png);
+    background-image: url(../img/bg6.jpg);
     width: 100%;
     height: 100vh;
     background-attachment: fixed;
