--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*.preloader {
+.preloader {
     background-color: #141414;
     top:0;
     bottom:0;
@@ -11,7 +11,6 @@
 .preloader img {
     display: block;
     position: absolute;
-    position: absolute;
     left: 0;
     right: 0;
     top: 0;
@@ -19,7 +18,7 @@
     width: 50px;
     height: 50px;
     margin: auto;
-}*/
+}
 
 
 .hero-text {
@@ -79,7 +78,7 @@ nav{
 }
 
  .active{
-     background: linear-gradient(-45deg, #000000, #5d5d5d) !important;
+     /*background: linear-gradient(-45deg, #000000, #5d5d5d) !important;*/
      background-size: 400% 400%;
      /*!*-webkit-animation: Gradient 7s ease infinite;*/
      /*-moz-animation: Gradient 7s ease infinite;*/
