--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,900);
+
 /*===========Base===========*/
 html,body{
     width:100%;
@@ -74,10 +76,39 @@ nav button{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
-    font-size:50px;
-    opacity: 0;
+    font-family:'Lato', sans-serif !important;
+    font-size: 30pt !important;
+    font-weight: 300 !important;
+    color: white
+
 }
+/*.mySlides{
+    -webkit-transform: translateY(-80%);
+    -moz-transform: translateY(-80%);
+    -ms-transform: translateY(-80%);
+    -o-transform: translateY(-80%);
+    transform: translateY(-80%);
+}
+.is-visible{
+    top: 0;
+    opacity: 1;
+    display: block;
+    -webkit-animation: slide-in 0.6s;
+    -moz-animation: slide-in 0.6s;
+    animation: slide-in 0.6s;
+    -webkit-transform: translateY(+80%);
+    -moz-transform: translateY(+80%);
+    -ms-transform: translateY(+80%);
+    -o-transform: translateY(+80%);
+    transform: translateY(+80%);
+}
+.is-hidden{
+    -webkit-animation: slide-out 0.6s;
+    -moz-animation: slide-out 0.6s;
+    animation: slide-out 0.6s;
+    display: none;
+
+}*/
 
 .navbar-brand{
     -webkit-transform: rotateZ(-7deg);
@@ -169,7 +200,6 @@ nav button{
 /*===========Home page===========*/
 
 #home{
-    background-image: url(../img/bg6.jpg);
     width: 100%;
     height: 100vh;
     background-attachment: fixed;
@@ -194,11 +224,110 @@ canvas {
 }
 #particles-js{
     width: 100%;
-    height: 100vh;
-    background-image: url(../img/bg6.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/bg6.jpg) fixed center center;
+    /*background-image: url(../img/bg6.jpg);*/
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
+}
+
+
+/*Text slider*/
+.container-fluid {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+}
+#myPageContent, section {
+    height:100% !important;
+    width:100% !important;
+}
+
+
+/* Slider */
+#textSlider.row {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100% !important;
+}
+#textSlider div {
+    color: #FFF;
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+}
+
+.iamCol {
+    text-align: center;
+    float: left;
+    font-weight: 300;
+    font-size:30pt;
+}
+.iamCol p:nth-child(2) { margin-top: -20pt !important; }
+.slideCol {
+    overflow: hidden;
+    font-weight: 900;
+    font-size:70pt;
+    display: block;
+    white-space: nowrap;
+    text-align: center;
+}
+.slideCol p { margin: 0px !important; }
+
+.scroller1 {
+    height: 70pt;
+    line-height: 70pt;
+    overflow: hidden;
+}
+.scroller1 .inner { animation: 10s normal infinite running scroll; }
+@keyframes scroll {
+    0%  	{margin-top: 0px;}
+    15% 	{margin-top: 0px;}
+
+    25%  {margin-top: -70pt;}
+    40%  {margin-top: -70pt;}
+
+    50%  {margin-top: -140pt;}
+    65%  {margin-top: -140pt;}
+
+    75%  {margin-top: -210pt;}
+    90%  {margin-top: -210pt;}
+
+    100% {margin-top: 0px;}
+}
+
+
+/*==========  Mobile First Method  ==========*/
+
+/* Custom, iPhone Retina */
+@media only screen and (min-width : 320px) and (max-width : 479px) {
+    #textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
+    .iamCol { text-align: center; font-size:20pt; }
+    .iamCol p { display: inline !important; }
+    .slideCol { font-size: 25pt; text-align: center; margin-top: -20px; }
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (min-width : 480px) and (max-width : 765px) {
+    #textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
+    .iamCol { text-align: center; font-size:25pt; }
+    .iamCol p { display: inline !important; }
+    .slideCol { font-size: 38pt; text-align: center; margin-top: -20px; }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) and (max-width : 992px) {
+    #textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
+    .iamCol { text-align: center; font-size:30pt; }
+    .iamCol p { display: inline !important; }
+    .slideCol { font-size: 50pt; text-align: center; margin-top: 5px; }
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) and (max-width : 1200px) {
+    #textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
+    .iamCol { text-align: center; font-size:30pt; }
+    .slideCol { font-size: 55pt; text-align: center; }
 }
 
 
@@ -249,6 +378,18 @@ canvas {
     text-align: center !important;
 
 }
+
+.description {
+    color: black;
+    font-size: 20px;
+    font-family: "Montserrat", "Open Sans", "Helvetica Neue", Helvetica, sans-serif;
+    font-weight: 300;
+    padding: 10px;
+    text-shadow: 0.5px 0.5px grey;
+
+
+}
+
 
 
 
@@ -470,4 +611,9 @@ footer ul li a:hover{
     100% {
         background-position: 0% 50%
     }
+}
+
+
+
+
 }
