--- a/css/style.css
+++ b/css/style.css
@@ -69,46 +69,7 @@ nav button{
     background-color: white !important;
     padding: 4px 8px !important;
 }
-/*===========Hero Text===========*/
-.hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family:'Lato', sans-serif !important;
-    font-size: 30pt !important;
-    font-weight: 300 !important;
-    color: white
 
-}
-/*.mySlides{
-    -webkit-transform: translateY(-80%);
-    -moz-transform: translateY(-80%);
-    -ms-transform: translateY(-80%);
-    -o-transform: translateY(-80%);
-    transform: translateY(-80%);
-}
-.is-visible{
-    top: 0;
-    opacity: 1;
-    display: block;
-    -webkit-animation: slide-in 0.6s;
-    -moz-animation: slide-in 0.6s;
-    animation: slide-in 0.6s;
-    -webkit-transform: translateY(+80%);
-    -moz-transform: translateY(+80%);
-    -ms-transform: translateY(+80%);
-    -o-transform: translateY(+80%);
-    transform: translateY(+80%);
-}
-.is-hidden{
-    -webkit-animation: slide-out 0.6s;
-    -moz-animation: slide-out 0.6s;
-    animation: slide-out 0.6s;
-    display: none;
-
-}*/
 
 .navbar-brand{
     -webkit-transform: rotateZ(-7deg);
@@ -199,16 +160,8 @@ nav button{
 
 /*===========Home page===========*/
 
-#home{
-    width: 100%;
-    height: 100vh;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-}#home_2{
-    background-image: url(../img/tech.png);
+#home_2{
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/tech.png) fixed center center;
     height: 10vh;
     margin: 50px;
     background-attachment: fixed;
@@ -217,6 +170,12 @@ nav button{
     background-size: cover;
 
 }
+
+@media only screen and (min-width : 480px) and (max-width : 765px) {
+    #home_2 {display:none;
+    }
+}
+
 /* ---- particles.js container ---- */
 canvas {
     display: block;
@@ -224,7 +183,7 @@ canvas {
 }
 #particles-js{
     width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/bg6.jpg) fixed center center;
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/bg5.jpeg) fixed center center;
     /*background-image: url(../img/bg6.jpg);*/
     background-size: cover;
     background-position: 50% 50%;
@@ -232,7 +191,7 @@ canvas {
 }
 
 
-/*Text slider*/
+/*===========Hero Text===========*/
 .container-fluid {
     padding-right: 0px !important;
     padding-left: 0px !important;
@@ -613,7 +572,3 @@ footer ul li a:hover{
     }
 }
 
-
-
-
-}
