--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,900);
 
 /*===========Base===========*/
 html,body{
@@ -212,7 +211,7 @@ canvas {
 }
 #textSlider div {
     color: #FFF;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Carter One', cursive;
     text-transform: uppercase;
 }
 
