--- a/css/style.css
+++ b/css/style.css
@@ -88,12 +88,14 @@ nav button{
     position: absolute;
     left: 0px;
     right: 0px;
-    bottom: 15px;
+    bottom: 10px;
     text-align: center;
-    margin: 10px auto;
+    margin: 5px auto;
     font-size: 30px;
 
+
 }
+
 .scroll-text{
     color: white;
     display: block;
@@ -237,6 +239,9 @@ canvas {
     line-height: 70pt;
     overflow: hidden;
 }
+.scroller1:hover{
+    cursor: auto;
+}
 .scroller1 .inner { animation: 10s normal infinite running scroll; }
 @keyframes scroll {
     0%  	{margin-top: 0px;}
@@ -305,7 +310,7 @@ canvas {
     background-position: center center;
     -webkit-border-radius: 99em;
     -moz-border-radius: 99em;
-    border-radius: 99em;
+    border-radius: 50%;
     border: 5px solid #eee;
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
