--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ canvas {
 }
 #particles-js{
     width: 100%;
+    z-index: 0;
     background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/bg5.jpeg) fixed center center;
     background-size: cover;
     background-position: 50% 50%;
@@ -500,6 +501,7 @@ footer{
     margin-right: auto;
     margin-left: auto;
     text-align: center;
+    z-index: 999;
 }
 footer ul{
     list-style: none;
@@ -525,6 +527,10 @@ footer ul li a:hover{
     text-decoration: none;
 
 
+}
+    /*===========Blog===========*/
+#blog{
+    padding-top: 100px;
 }
     /*===========Footer Gradient===========*/
 
